--- a/src/templates/blog-index.html
+++ b/src/templates/blog-index.html
@@ -47,12 +47,14 @@
                   <a class="blog-card__image" style="background-image: url('{{ content.featured_image }}')"; href="{{ content.absolute_url }}"></a>
                 {% endif %}
                 <div class="blog-card__content">
-                  <div class="blog-card__tags">
-                      {% icon name="tag" style="SOLID" %}
-                      {% for tag in content.tag_list %}
-                        <a class="blog-card__tag-link" href="{{ blog_tag_url(group.id, tag.slug) }}">{{ tag.name }}</a>
-                      {% endfor %}
-                  </div>
+                  {% if content.tag_list %}
+                    <div class="blog-card__tags">
+                        {% icon name="tag" style="SOLID" %}
+                        {% for tag in content.tag_list %}
+                          <a class="blog-card__tag-link" href="{{ blog_tag_url(group.id, tag.slug) }}">{{ tag.name }}</a>
+                        {% endfor %}
+                    </div>
+                  {% endif %}
                   {{ content.post_list_content|truncatehtml(170) }}
                 </div>
               </div>
