--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -26,7 +26,7 @@
                     "right": 0
                 }
             %}
-                {% dnd_module 
+                {% dnd_module
                     path="@hubspot/linked_image",
                     flexbox_positioning="TOP_CENTER",
                     img={
@@ -71,12 +71,12 @@
                 "src": get_asset_url("../images/computer.png"),
                 "alt": "Computer and phone",
                 "size_type": "auto"
-              }    
+              }
             %}
             {% end_dnd_module %}
           {% end_dnd_row %}
         {% end_dnd_column %}
-        {% dnd_column 
+        {% dnd_column
           offset=6,
           width=6
         %}
@@ -87,16 +87,16 @@
                   <h2 style="color: #fff;">Full Control</h2>
                   <p style="color: #fff;">Leverage the intuitive super awesome software that saves you time and will rescue your business. Promise.</p>
                   <ul style="color: #fff;">
-                    <li>Someting awesome here</li>
-                    <li>Someting awesome here</li>
-                    <li>Someting awesome here</li>
+                    <li>Something awesome here</li>
+                    <li>Something awesome here</li>
+                    <li>Something awesome here</li>
                   </ul>
                 </div>
               {% end_module_attribute %}
             {% end_dnd_module %}
           {% end_dnd_row %}
           {% dnd_row %}
-            {% dnd_module 
+            {% dnd_module
               path="../modules/Customizable Button",
               flexbox_positioning="MIDDLE_LEFT",
               link="#",
@@ -111,7 +111,7 @@
     {% dnd_section %}
       {% dnd_column %}
         {% dnd_row %}
-          {% dnd_module 
+          {% dnd_module
             path="@hubspot/rich_text",
             offset=0,
             width=4
@@ -123,7 +123,7 @@
               </div>
             {% end_module_attribute %}
           {% end_dnd_module %}
-          {% dnd_module 
+          {% dnd_module
             path="@hubspot/rich_text",
             offset=4,
             width=8
@@ -133,7 +133,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut scelerisque est eros, quis tincidunt nulla ultrices a. Nulla auctor lacus vitae quam facilisis efficitur. Duis sit amet feugiat lacus. Ut varius ipsum quis egestas mattis. Sed sollicitudin, orci non faucibus porta, lectus nisi tristique enim, nec commodo nisi massa non magna. Etiam condimentum mi et neque luctus vestibulum. Maecenas facilisis efficitur semper.</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut scelerisque est eros, quis tincidunt nulla ultrices a. Nulla auctor lacus vitae quam facilisis efficitur. Duis sit amet feugiat lacus. Ut varius ipsum quis egestas mattis. Sed sollicitudin, orci non faucibus porta, lectus nisi tristique enim, nec commodo nisi massa non magna. Etiam condimentum mi et neque luctus vestibulum. Maecenas facilisis efficitur semper.</p>
               </div>
-            {% end_module_attribute %} 
+            {% end_module_attribute %}
           {% end_dnd_module %}
         {% end_dnd_row %}
       {% end_dnd_column %}
