--- a/src/templates/pricing.html
+++ b/src/templates/pricing.html
@@ -11,7 +11,7 @@
     {# Pricing Section #}
     {% dnd_section %}
       {% dnd_column %}
-        {% dnd_row 
+        {% dnd_row
           margin={
             "top": 0,
             "bottom": 40
@@ -52,12 +52,12 @@
                 "src": get_asset_url("../images/iphones.png"),
                 "alt": "Computer and phone",
                 "size_type": "auto"
-              }    
+              }
             %}
             {% end_dnd_module %}
           {% end_dnd_row %}
         {% end_dnd_column %}
-        {% dnd_column 
+        {% dnd_column
           offset=6,
           width=6
         %}
@@ -69,18 +69,18 @@
                   <p style="color: #fff;">Leverage the intuitive super awesome software that saves you time and will rescue your business. Promise.</p>
                   <p style="color: #fff;">Leverage the intuitive super awesome software that saves you time and will rescue your business. Promise.</p>
                   <ul style="color: #fff;">
-                    <li>Someting awesome here</li>
-                    <li>Someting awesome here</li>
-                    <li>Someting awesome here</li>
-                    <li>Someting awesome here</li>
-                    <li>Someting awesome here</li>
+                    <li>Something awesome here</li>
+                    <li>Something awesome here</li>
+                    <li>Something awesome here</li>
+                    <li>Something awesome here</li>
+                    <li>Something awesome here</li>
                   </ul>
                 </div>
               {% end_module_attribute %}
             {% end_dnd_module %}
           {% end_dnd_row %}
           {% dnd_row %}
-            {% dnd_module 
+            {% dnd_module
               path="../modules/Customizable Button",
               flexbox_positioning="MIDDLE_LEFT",
               link="#",
