--- a/src/css/_header.css
+++ b/src/css/_header.css
@@ -34,22 +34,29 @@
   color: {{ get_theme_style_setting('header_group.header.header_menu_link_color.color') }};
 }
 
+.navigation-primary a:hover,
+.navigation-primary a:focus,
+.navigation-primary a:active {
+  color: {{ get_theme_style_setting('header_group.header.header_menu_link_hover_color.color') }};
+}
+
 .navigation-primary .submenu.level-1 > li > a.active-item:after {
   background-color: {{ get_theme_style_setting('header_group.header.header_menu_link_color.color') }};
 }
 
 .submenu.level-2 {
   background-color: {{ get_theme_style_setting('header_group.header.header_bg_color.color') }};
-  border-color: {{ get_theme_style_setting('header.header_menu_border_color.color') }};
+  border-color: {{ get_theme_style_setting('header_group.header.header_child_menu_border_color.color') }};
 }
 
 .submenu.level-2 > li {
-  border-bottom-color: {{ get_theme_style_setting('header_group.header.header_menu_border_color.color') }};
+  border-bottom-color: {{ get_theme_style_setting('header_group.header.header_child_menu_border_color.color') }};
 }
 
 .submenu.level-2 .menu-item .menu-link:hover,
 .submenu.level-2 .menu-item .menu-link:focus {
-  background-color: {{ get_theme_style_setting('header_group.header.header_menu_hover_color.color') }};
+  background-color: {{ get_theme_style_setting('header_group.header.header_child_menu_hover_bg_color.color') }};
+  color: {{ get_theme_style_setting('header_group.header.header_child_menu_hover_color.color') }};
 }
 
 @media screen and (max-width: 767px) {
@@ -150,10 +157,10 @@
   }
 
   .submenu.level-1 > li {
-    border-top-color: {{ get_theme_style_setting('header_group.header.header_menu_border_color.color') }};
+    border-top-color: {{ get_theme_style_setting('header_group.header.header_child_menu_border_color.color') }};
   }
 
   .submenu.level-2 .menu-item {
-    border-top-color: {{ get_theme_style_setting('header_group.header.header_menu_border_color.color') }};
+    border-top-color: {{ get_theme_style_setting('header_group.header.header_child_menu_border_color.color') }};
   }
 }
